update to new ideas

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "license": "MIT",
   "dependencies": {
-    "xdg-app-paths": "^8.3.0"
+    "command-line-args": "^6.0.1",
+    "command-line-usage": "^7.0.3",
+    "env-paths": "^3.0.0"
   }
 }
