--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "command-line-usage": "^7.0.3",
     "env-paths": "^3.0.0",
     "hash-it": "^7.0.1",
-    "mkdirp": "^3.0.1",
-    "stable-hash": "^0.0.6"
+    "mkdirp": "^3.0.1"
   }
 }
