--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "type": "module",
   "license": "MIT",
   "dependencies": {
+    "@slippi/slippi-js": "^7.2.0",
     "command-line-args": "^6.0.1",
     "command-line-usage": "^7.0.3",
     "env-paths": "^3.0.0",
+    "execa": "^9.6.1",
+    "extensionless": "^2.0.2",
     "hash-it": "^7.0.1",
+    "lodash": "^4.17.21",
     "mkdirp": "^3.0.1"
   }
 }
