--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "slp-rec",
-  "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
-  "license": "MIT",
-  "dependencies": {
-    "@slippi/slippi-js": "^7.2.0",
-    "command-line-args": "^6.0.1",
-    "command-line-usage": "^7.0.3",
-    "env-paths": "^3.0.0",
-    "execa": "^9.6.1",
-    "extensionless": "^2.0.2",
-    "hash-it": "^7.0.1",
-    "lodash": "^4.17.21",
-    "mkdirp": "^3.0.1"
-  }
+    "name": "slp-rec",
+    "version": "1.0.0",
+    "main": "index.js",
+    "type": "module",
+    "license": "MIT",
+    "scripts": {
+        "start": "node index.js"
+    },
+    "dependencies": {
+        "@slippi/slippi-js": "^7.2.0",
+        "command-line-args": "^6.0.1",
+        "command-line-usage": "^7.0.3",
+        "env-paths": "^3.0.0",
+        "execa": "^9.6.1",
+        "extensionless": "^2.0.2",
+        "hash-it": "^7.0.1",
+        "ini": "^6.0.0",
+        "lodash": "^4.17.21",
+        "mkdirp": "^3.0.1"
+    }
 }
