--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "license": "MIT",
     "scripts": {
-        "start": "node index.js"
+        "start": "node --import=extensionless/register index.js"
     },
     "dependencies": {
         "@slippi/slippi-js": "^7.2.0",
